Created HTML outline for project

--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         <p>&copy; 2023 Your Weather App</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
