Added feature to see weather on location search

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <h1>Weather App</h1>
-        <!-- You can add a logo or any other header content here -->
     </header>
 
     <main>
@@ -17,22 +16,17 @@
             <h2>Current Weather</h2>
             <div class="weather-info">
                 <div class="location">
-                    <!-- Display the location name here -->
                 </div>
                 <div class="temperature">
-                    <!-- Display the temperature here -->
                 </div>
                 <div class="description">
-                    <!-- Display the weather description here -->
                 </div>
-                <!-- Add more weather information as needed (e.g., humidity, wind speed) -->
             </div>
         </section>
 
         <section class="forecast">
             <h2>5-Day Forecast</h2>
             <div class="forecast-list">
-                <!-- Display the 5-day forecast here -->
             </div>
         </section>
 
@@ -46,7 +40,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Weather App</p>
+        <p>2023 Weather App by Rohan Gandhi</p>
     </footer>
 
     <script src="script.js" defer></script>
