Weather Forecast feature

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </section>
 
         <section class="forecast">
-            <h2>5-Day Forecast</h2>
+            <h2>10-Day Forecast</h2>
             <div class="forecast-list">
             </div>
         </section>
 
         <section class="search">
-            <h2>Search Weather</h2>
+            <h2>Location Search</h2>
             <form id="search-form">
                 <input type="text" id="search-input" placeholder="Enter a location">
                 <button type="submit">Search</button>
