Added more elements for current weather

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 </div>
                 <div class="description">
                 </div>
+                <div class="feelstemperature">
+                </div>
+                <div class="wind">
+                </div>
+                <div class="humidity">
+                </div>
+                <div class="uv">
+                </div>
             </div>
         </section>
 
